Fix text align

--- a/css/style.css
+++ b/css/style.css
@@ -864,15 +864,6 @@ h2 {
   background-position: center 50%;
 }
 
-.ws-bg61 {
-  color: white;
-  font-size: 15pt;
-  background-image: url(../images/banner/Endodontics.jpg);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-}
-
 .ws-bg66 {
   color: white;
   font-size: 15pt;
@@ -2216,10 +2207,6 @@ html {
   background-color: #e9e9e9;
 }
 
-.ws-purpose-item p {
-  padding: 3em;
-}
-
 .ws-button {
   display: block;
   padding: 0.5em;
@@ -2851,6 +2838,15 @@ h2 {
   color: white;
   font-size: 15pt;
   background-image: url(../images/wong&sim/HomepageBackground/holistic.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.ws-bg67 {
+  color: white;
+  font-size: 15pt;
+  background-image: url(images/wns.png);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
